Adds toggle functionality, adds fonts

--- a/index.html
+++ b/index.html
@@ -3,12 +3,27 @@
   <head>
     <link rel="stylesheet" href="main.css">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <link href='http://fonts.googleapis.com/css?family=PT+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+
     <title>Carl's Sandbox</title>
   </head>
 
   <body>
     <h1>Colors you can finally use</h1>
-    <div id="colors"></div>
+    <button id="toggle">Toggle</button>
+
+    <div class="colors">
+      <div id="colorList"></div>
+    </div>
+
+    <div class="fonts">
+      <h2>Fonts</h2>
+      <ul>
+        <li><a href="http://www.google.com/fonts/specimen/Lato">Lato</a></li>
+        <li><a href="http://www.google.com/fonts/specimen/PT+Serif">PT Serif</a></li>
+      </ul>
+    </div>
+
     <script src="sample.js"></script>
   </body>
 </html>
