--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <ul>
         <li><a href="http://www.google.com/fonts/specimen/Lato">Lato</a></li>
         <li><a href="http://www.google.com/fonts/specimen/PT+Serif">PT Serif</a></li>
+        <li><a href="http://www.google.com/fonts/specimen/Source+Sans+Pro">Source Sans Pro</a></li>
       </ul>
     </div>
 
