Update ouibounce text

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="modal-content">
           <div class="modal-body">
             <h2>Thank you for stopping by!</h2>
-            <p>If you'd like to stay up to date with my project, sign up for my newsletter. (Awesomeness guaranteed)</p>
+            <p>If you'd like to stay up to date with my projects, sign up for the newsletter. (Awesomeness guaranteed)</p>
             
             <!-- MailChimp Signup -->
             <!-- Begin MailChimp Signup Form -->
