Adds udemy offering to ouibounce

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
         <div class="modal-content">
           <div class="modal-body">
             <h2>Thank you for stopping by!</h2>
+            
+            <p>Looking to learn about online marketing? Check out <a href="https://www.udemy.com/intro-to-adwords" target="blank">my Adwords Udemy course</a>. Use the code "carl" to get it for free.</p>
+
             <p>If you'd like to stay up to date with my projects, sign up for the newsletter. (Awesomeness guaranteed)</p>
             
             <!-- MailChimp Signup -->
