--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
         <li><a href="http://www.google.com/fonts/specimen/Lato">Lato</a></li>
         <li><a href="http://www.google.com/fonts/specimen/PT+Serif">PT Serif</a></li>
         <li><a href="http://www.google.com/fonts/specimen/Source+Sans+Pro">Source Sans Pro</a></li>
+        <li><a href="http://www.google.com/fonts/specimen/Montserrat">*Montserrat</a></li>
+        <li><a href="http://www.google.com/fonts/specimen/Open+Sans">*Open Sans</a></li>
+        <li><a href="http://www.google.com/fonts/specimen/Roboto">*Roboto</a></li>
       </ul>
+      <p>*Voted most popular font of <a href="http://www.typeandgrids.com/blog/the-ten-most-popular-web-fonts-of-2013" target="blank">2013</a></p>
     </div>
 
     <!-- OuiBounce Modal -->
