--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
         <li><a href="http://www.google.com/fonts/specimen/Roboto">*Roboto</a></li>
       </ul>
       <p>*Voted most popular font of <a href="http://www.typeandgrids.com/blog/the-ten-most-popular-web-fonts-of-2013" target="blank">2013</a></p>
+
+      <h2>Fonts 2</h2>
+      <ul>
+        <li><a href="http://fontfabric.com/bebas-neue/">Bebas</a></li>
+        <li><a href="http://www.google.com/fonts/specimen/Ubuntu">Ubuntu</a></li>
+        <li><a href="http://www.google.com/fonts/specimen/Raleway">Rakeway</a></li>
+        <li><a href="http://www.google.com/fonts/specimen/Cabin">Cabin</a></li>
+        <li><a href="http://www.google.com/fonts/specimen/PT+Sans">PT Sans</a></li>
+      </ul>
     </div>
 
     <!-- Ouibounce Modal -->
